--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,10 @@
     <string name="DOB">Date of Birth</string>
     <string name="login">Login</string>
     <string name="location">Location</string>
+    <string name="figure">Figure</string>
+    <string name="eye_color">Eye Colour</string>
+    <string name="hair_style">Hair Style</string>
+    <string name="height">Height</string>
+    <string name="religion">Religion</string>
+    <string name="hobby">Hobby</string>
 </resources>
