--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,6 @@
     <string name="height">Height</string>
     <string name="religion">Religion</string>
     <string name="hobby">Hobby</string>
+    <string name="smoking">Smoking</string>
+    <string name="bio">Bio</string>
 </resources>
