--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,6 +46,15 @@
     <string name="settings">Settings</string>
     <string name="messages">Message</string>
     <string name="config">Configuration</string>
+    <string name="home">Home</string>
+    <string name="free_coins">Free Coins</string>
+    <string name="match">Match</string>
+    <string name="collect">Collect</string>
+    <string name="profile">Profile</string>
+    <string name="market_place">MarketPlace</string>
+    <string name="swipe">Swipe It</string>
+    <string name="picks_available">Picks Available</string>
+    <string name="next_free_coin">Next free coin In</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
