--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,6 +55,11 @@
     <string name="swipe">Swipe It</string>
     <string name="picks_available">Picks Available</string>
     <string name="next_free_coin">Next free coin In</string>
+    <string name="lounge">Lounge</string>
+    <string name="wallet">Wallet</string>
+    <string name="support_and_contact">Support and Contact</string>
+    <string name="quests">Quests</string>
+    <string name="inventory">Inventory</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
